; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_eeprom_update_conf.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mxss/extr_mxss.c_eeprom_update_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@fled_mode = common dso_local global i32 0, align 4
@fled_val = common dso_local global i32 0, align 4
@FLED_VAL_STEP = common dso_local global i32 0, align 4
@EEPROM_FRONTLED_ADDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eeprom_update_conf() #0 {
  %1 = alloca %struct.TYPE_2__, align 4
  %2 = load i32, i32* @fled_mode, align 4
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 2
  store i32 %2, i32* %3, align 4
  %4 = load i32, i32* @fled_val, align 4
  %5 = icmp eq i32 %4, 255
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @FLED_VAL_STEP, align 4
  %8 = sdiv i32 256, %7
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  br label %15

10:                                               ; preds = %0
  %11 = load i32, i32* @fled_val, align 4
  %12 = load i32, i32* @FLED_VAL_STEP, align 4
  %13 = sdiv i32 %11, %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  br label %15

15:                                               ; preds = %10, %6
  %16 = call i32 @eeprom_set_valid(i32 1)
  %17 = load i32, i32* @EEPROM_FRONTLED_ADDR, align 4
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @eeprom_update_byte(i32 %17, i32 %19)
  ret void
}

declare dso_local i32 @eeprom_set_valid(i32) #1

declare dso_local i32 @eeprom_update_byte(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
